Add effects functionality to the API
